infrastructure/apps/media-server/qbit/qbittorent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      # --- Gluetun Sidecar ---
      - name: gluetun
        image: qmcgaw/gluetun:latest
        securityContext:
          capabilities:
            add:
              - NET_ADMIN # Required for VPN tunnel and firewall rules
        ports:
        - containerPort: 8080
          name: http-webui
        volumeMounts:
        - mountPath: /dev/net/tun
          name: tun-device
      # --- qBittorrent ---
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      - name: tun-device
        hostPath:
          path: /dev/net/tun
