infrastructure/apps/media-server/qbit/qbit-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbit-svc
  namespace: media
spec:
  selector:
    app: qbit
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbit-ingress
  namespace: media
spec:
  rules:
  - host: qbit.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbit-svc
            port:
              number: 80
